--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.example.rascal.lx03b"
+        applicationId "com.example.rascal.lx03c"
         minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
@@ -26,7 +26,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     compile 'com.android.support:cardview-v7:27.1.1'  //cardview卡片布局
-    implementation'com.youth.banner:banner:1.4.10'  //banner轮播图
+    implementation 'com.youth.banner:banner:1.4.10'  //banner轮播图
 
     implementation 'com.android.support:design:27.1.1'  //侧滑、Fragment、TabLayout
     implementation 'com.android.support:recyclerview-v7:27.1.1' //recyclerview布局
